vpc-asg-lb-ec2/route_table.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.demo.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
}
resource "aws_route_table_association" "public-a" { 
    subnet_id = aws_subnet.public-a.id
    route_table_id =  aws_route_table.public.id
}

resource "aws_route_table" "private" {
   vpc_id = aws_vpc.demo.id

  route {
      cidr_block = "0.0.0.0/0"
      nat_gateway_id = aws_nat_gateway.main.id
  }
}
resource "aws_route_table_association" "private-a" {
    subnet_id = aws_subnet.private-a.id
    route_table_id =  aws_route_table.private.id
}
